src/app.css
:root, body  {
    font-family: 'Saira', sans-serif;
    background: url(assets/bg.png);
    color: #fff;
    margin: 0; padding: 0;
    height: 100%;

    --panel-bg: hsla(0, 0%, 5%, 75%);
}
#app {
    display: flex;
    flex-direction: row;
    height: 100%;
}

.panel {
    min-height: 0;
    border-radius: 16px;
    text-align: center;
    background: var(--panel-bg);
    color: #fff;
    padding: 16px 32px;

    &.inline {
        display: flex;
        flex-direction: row;
        
        gap: 16px;

        h1, h2, h3, h4, h5, h6, p {
            margin: 0;
        }
    }

    h3, p {
        margin: 0;
    }
}

.stats {
    display: inline-block;
    text-align: center;

    span:first-child {
        width: 48px;
        display: inline-block;
    }
    span:last-child {
        width: 64px;
        display:inline-block;
    }
}


.error {
    position: fixed;
    padding: 8px 16px;
    background: hsl(0, 75%, 50%);
    color: #fff;
    top: 0; left: 50%;
    transform: translate(-50%, 0);
}

h3, h4 {
    margin: 0;
    margin-bottom: 8px;
}
h3 {
    font-size: 20px;
}

.layout-row {
    display: flex;
    flex-direction: row;
    gap: 16px;
    align-items: stretch;
    & > * {
        flex-grow: 1;
    }
}

.sidebar {
    width: 300px;
    flex-shrink: 0;
    padding: 16px;
    background: hsl(220, 35%, 15%);
    display: flex; flex-direction: column;
    gap: 6px;

    h3, p {
        text-align: center;
        margin: 0;
    }
}

label {
    font-weight: bold;
    font-size: 16px;
    color: hsl(220, 35%, 85%);
}
.field {
    display: flex;
    flex-direction: row;

    &:not(.large) label { flex-grow: 1; }
    &:not(.large) {
        align-items: center;
    }

    &.large {
        flex-direction: column;
    }
}

.field-row {
    display: flex;
    flex-direction: row;
    :first-child {
        flex-grow: 1;
    }
}

.button, select, ::file-selector-button {
    border-radius: 4px;
    border: 0;
    background: hsl(220, 35%, 25%);
    color: #fff;
    cursor: pointer;
    display: inline-block;
 
    &:active {
        background: hsl(220, 35%, 20%);
    }
    &:disabled {
        background: hsl(220, 5%, 35%);
        cursor: default;
    }
}

select:focus:hover {
    background: hsl(220, 35%, 20%);
}

button, .input, select, ::file-selector-button, .radiobutton label {
    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    font-weight: normal;
    color: #fff;
    padding: 4px 8px;
    font-size: 14px; }
.input {
    border: 0;
    background: transparent;
    color: #fff;
    border-bottom: 2px solid hsl(220, 25%, 50%); 
    &:focus {
        outline: 0;
        border-color: #fff;
    }
}


.fg-Common, .fg-Basic {
    color: hsl(0, 0%, 80%); }
.bg-Common {
    background: hsl(0, 0%, 80%) !important; }
.fg-Ancient {
    font-weight: 600;
    color: hsl(220, 100%, 95%); }
.fg-Rare {
    color: hsl(49, 98%, 60%); }
.bg-Rare {
    background: hsl(49, 98%, 60%) !important; }
.fg-Uncommon {
    color: hsl(180, 98%, 69%); }
.bg-Uncommon {
    background: hsl(180, 98%, 69%) !important; }
.fg-Curse {
    color: #e666fe; }
.bg-Curse { background: #e666fe !important; }
.fg-Event {
    color: hsl(130, 63%, 65%); }
.bg-Event {
    background: hsl(130, 63%, 65%) !important; }


.res {
    position: relative;
    .popup {
        position: absolute;
        display: none;

        background: hsl(220, 35%, 15%);
        padding: 8px 16px;
        z-index: 10;
        top: -4px;
        left: calc(100% + 16px);

        width: 256px;
        text-wrap: wrap;

        border-radius: 8px;
    }
    &:hover .popup {
        display: block;
    }
}

.fg-text-gold {
    /* keywords */
    font-weight: 600;
}
.fg-text-blue {
    color: hsl(220, 95%, 85%);
}

.radiobutton {
    border-radius: 4px;
    border: 0;
    background: hsl(220, 35%, 25%);
    color: #fff;
    cursor: pointer;
    display: inline-flex;
    flex-direction: row;
    gap: 0;
    padding: 0;
    
    label {
        padding: 4px 16px;
        background: hsl(220, 35%, 25%);
        cursor: pointer;
    }
    :first-child + label {
        border-top-left-radius: 4px;
        border-bottom-left-radius: 4px;
    }
    label:last-child {
        border-top-right-radius: 4px;
        border-bottom-right-radius: 4px; }
    input:checked + label {
        background: hsl(220, 35%, 15%);
    }
    label:active {
        background: hsl(220, 35%, 20%);
    }

    input {
        display: none;
    }
}

.sep {
    flex-grow: 1;
}

